fix border-radius on small screen

--- a/internal/components/src/search-dialog/search-dialog.module.css
+++ b/internal/components/src/search-dialog/search-dialog.module.css
@@ -33,6 +33,7 @@
 
   @media (max-width: 768px) {
     width: 100%;
+    border-radius: 0;
   }
 }
 
